<resources>
    <string name="app_name">Maakomome</string>
    <string name="title_activity_home__navigation_pager">Home_NavigationPager</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_adresse">Adresse Email</string>
    <string name="password">Mot de passe</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="tel_number">Numéro de téléphone</string>
    <string name="empty_error">Veuillez renseigner tous les champs</string>
    <string name="email_or_passeword_error">Adresse email ou mot de passe incorrect</string>
    <string name="email_exist">The email address is already in register</string>
    <string name="connection">connection</string>

    <string name="sucssec_sign">inscription effectuée avec succes.\nUn email vient de vous être envoyé cliquer sur le lien afin de de valider votre compt.\nIl se peut que le message soit déplacer dans vos courier indesirable.</string>

    <string name="email_error">Adresse email incorrect</string>
    <string name="password_error">Le mot de passe doit être entre 7 et 20 caractères</string>
    <string name="offLine">Veuillez vérifier votre connexion internet et réessayer</string>
    <string name="no_empty">Ce champ ne doit pas etre vide</string>
    <string name="password_forgot">Mot de passe oublié</string>
    <string name="send">send</string>
    <string name="password_forgot_message">Saisissez votre adresse e-mail"\n"Un message va vous être envoyé."\n"Cliquer sur le lien afin de de valider votre compt."\n""\n"Il se peut que le message se soit déplacer dans vos couriers indesirable."\n"</string>
    <string name="message_sent">Message envoyé ✔︎</string>
    <string name="unregistered_email">Cette adresse email n\'est pas enregistré</string>
    <string name="ok">OK</string>
    <string name="emailFormat">Format d\'adresse mail non valide</string>
    <string name="diter">Éditer</string>
    <string name="mk_infos">Inscrivez vous afin d\'obtenir votre numéro unique MK Ce numéro vous servira d\'indententifier tout vos affaires et de puvoir vous contacter</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="title_activity_home__navigation_">Mofication Profil</string>
    <string name="invalide_seizure">Saisie invalide</string>
    <string name="invalide_firstname">Prénom invalide</string>
    <string name="invalide_lastname">Nom invalide</string>
    <string name="invalide_phonenumber">Numéro de téléphone invalide</string>
    <string name="affiliations">Mes affiliations</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="firsname_lastname">Prénom - Nom</string>
    <string name="affliate_info">vous pouvez avoir au maximum 2 affiliations</string>
    <string name="add_affliant">Ajouter un autre affliant</string>
    <string name="inscription">Inscription</string>
    <string name="serverError">Une erreur s\'est produite veuillez réessayer ultérieurement</string>
    <string name="parametre">Paramètre</string>
    <string name="recovery">Mot de passe oublié</string>
    <string name="historique">Historique</string>
    <string name="profil">Profil</string>
    <string name="declaration">Déclaration</string>
    <string name="edite_profil">Éditer profil</string>
    <string name="affliate_edite">Éditer affliation</string>
    <string name="connexion">Connexion</string>
    <string name="logOut">Déconnexion</string>


</resources>
