<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/login_Fragment">


    <fragment
        android:id="@+id/login_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.authentication.login.Login_Fragment"
        android:label="@string/connexion"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_login_Fragment_to_sign_Fragment"
            app:destination="@id/sign_Fragment" />
        <action
            android:id="@+id/action_login_Fragment_to_recovery_Fragment"
            app:destination="@id/recovery_Fragment" />
        <action
            android:id="@+id/action_login_Fragment_to_historique_Fragment"
            app:destination="@id/historique_Fragment" />
    </fragment>

    <!--  - - - - - - - - - - - - - - - - - - - - - - - -->

    <fragment
        android:id="@+id/sign_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.authentication.register.Register_Fragment"
        android:label="@string/inscription"
        tools:layout="@layout/sign_fragment" />

    <!--  - - - - - - - - - - - - - - - - - - - - - - - -->

    <fragment
        android:id="@+id/recovery_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.authentication.recovery.Recovery_Fragment"
        android:label="@string/recovery"
        tools:layout="@layout/recovery_fragment" />

    <!--  - - - - - - - - - - - - - - - - - - - - - - - -->

    <fragment
        android:id="@+id/historique_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.historique.Historique_Fragment"
        android:label="@string/historique"
        tools:layout="@layout/historique_fragment" >
        <action
            android:id="@+id/action_historique_Fragment_to_profil_Fragment"
            app:destination="@id/profil_Fragment" />
        <action
            android:id="@+id/action_historique_Fragment_to_declaration_Fragment"
            app:destination="@id/declaration_Fragment" />
    </fragment>

    <!--  - - - - - - - - - - - - - - - - - - - - - - - -->

    <fragment
        android:id="@+id/profil_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.profil.Profil_Fragment"
        android:label="@string/profil"
        tools:layout="@layout/profil_fragment" >
        <action
            android:id="@+id/action_profil_Fragment_to_profil_Edite_Fragment"
            app:destination="@id/profil_Edite_Fragment" />
        <action
            android:id="@+id/action_profil_Fragment_to_affliate_Edite_Fragment"
            app:destination="@id/affliate_Edite_Fragment" />
    </fragment>

    <!--  - - - - - - - - - - - - - - - - - - - - - - - -->

    <fragment
        android:id="@+id/declaration_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.declaration.Declaration_Fragment"
        android:label="@string/declaration"
        tools:layout="@layout/declaration_fragment" />

    <!--  - - - - - - - - - - - - - - - - - - - - - - - -->

    <fragment
        android:id="@+id/profil_Edite_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.profil.User_edite.Profil_Edite_Fragment"
        android:label="@string/edite_profil"
        tools:layout="@layout/profil_edite_fragment" />

    <!--  - - - - - - - - - - - - - - - - - - - - - - - -->

    <fragment
        android:id="@+id/affliate_Edite_Fragment"
        android:name="com.amadoutirera.maakomome.presentation.profil.affiliate_edite.Affliate_Edite_Fragment"
        android:label="@string/affliate_edite"
        tools:layout="@layout/affliate_edite_fragment" />
</navigation>