<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profil.affiliate_edite.Affliate_Edite_Fragment">

    <TextView
        android:id="@+id/affliationTview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/affiliations"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/affliationTview"
        app:layout_constraintStart_toStartOf="@+id/affliationTview"
        app:layout_constraintTop_toBottomOf="@+id/affliationTview"
        tools:text="@string/affliate_info"
        android:padding="5dp"/>

    <ImageView
        android:id="@+id/affliate_img"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/affliate_img"
        app:layout_constraintTop_toTopOf="@+id/affliate_img">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firsname_lastnam_Edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/firsname_lastname"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tel_number_Edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/tel_number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/affliate_img"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firsname_lastnam_Edt2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/firsname_lastname"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tel_number_Edt2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/tel_number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:background="@color/green"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="5dp"
        android:text="@string/add_affliant"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edite_profil_fb_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_done_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>