<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.authentication.Sign_Fragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/passewordErrorTview"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayout"
            app:layout_constraintTop_toTopOf="@+id/emailAdresse_Edt"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/passewordErrorTview"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayout"
            app:layout_constraintTop_toTopOf="@+id/emailAdresse_Edt"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/emailAdresse_Edt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email_adresse"
            app:layout_constraintBottom_toTopOf="@+id/emailErrorTview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/passewordErrorTview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_Edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
            />
        <!---<EditText
            android:id="@+id/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/passewordErrorTview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            />-->


        <Button
            android:id="@+id/send_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="72dp"
            android:text="Inscription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/emailErrorTview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/eror"
            app:layout_constraintBottom_toTopOf="@+id/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Email error"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/passewordErrorTview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/password_error"
            android:textColor="@color/eror"
            app:layout_constraintBottom_toTopOf="@+id/send_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/maakomome"
            app:layout_constraintBottom_toTopOf="@+id/emailAdresse_Edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>